UI(styles): add styles

--- a/styles/config.styl
+++ b/styles/config.styl
@@ -1,2 +1,8 @@
+@import '_basis/_fonts'
+@import '_basis/_colors'
+@import '_basis/_variables'
+@import '_basis/_mixins'
 
 $contentClass = '.vuepress-blog-theme-content'
+$heroBackground = $black-base
+$descriptionBackgrond = $primary-color-tint
