--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -1,7 +1,5 @@
-$accentColor = lighten(#4a154b, 50%)
-$textColor = #2c3e50
-$borderColor = rgba(0,0,0,.05)
-$codeBgColor = #000
-$arrowBgColor = #ccc
+@import './config'
 
-$navbarHeight = 5rem
+$nprogressColor = $primary-color-tint
+$accentColor = $primary-color-tint
+$textColor = $font-color-base
