fix(styles): fix order of styles

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,12 +1,13 @@
 // @import './code.styl'
 // @import './custom-blocks.styl'
 // @import './arrow.styl'
-// @import './wrapper.styl'
+
 // @import './toc.styl'
 // @import './sw-popup.styl'
 @import './config.styl'
 @import './layouts.styl'
-@import './mobile.styl'
+@import './datetime.styl'
+@import './tag_list.styl'
 
 :root
   font-size: $font-size-root
@@ -88,3 +89,6 @@ body
       padding-left: 0
     .hero.has-sidebar
       padding-left: 0
+
+@import './mobile.styl'
+@import './wrapper.styl'
