--- a/styles/wrapper.styl
+++ b/styles/wrapper.styl
@@ -1,9 +1,8 @@
 $wrapper
-  max-width $contentWidth
-  margin 0 auto
-  background-color #FFF
+  background-color: #FFF
+  margin: 0 auto
+  max-width: $contentWidth
   @media (min-width: $MQNarrow)
-    padding 2rem
+    padding: 2rem
   @media (max-width: $MQMobileNarrow)
-    padding 1.5rem
-
+    padding: 1.5rem
