--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -9,6 +9,8 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
   .page,
   .hero.has-sidebar
     padding-left: $mobileSidebarWidth
+  .footer.has-sidebar
+    padding-left: $mobileSidebarWidth + 8px
 // wide mobile
 @media (max-width: $MQMobile)
   .sidebar
@@ -17,7 +19,8 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
     transform: translateX(-100%)
     transition: transform 0.2s ease
   .page,
-  .hero.has-sidebar
+  .hero.has-sidebar,
+  .footer.has-sidebar
     padding-left: 0
   .theme-container
     &.sidebar-open
